[package]
name = "wireguard-configure"
version = "0.1.1"
authors = [
    "Alex Eubanks <endeavor@rainbowsandpwnies.com>",
    "Giulio De Pasquale <depasquale+github@giugl.io>"
]
repository = "https://github.com/peperunas/wireguard-configure"
description = "Command-line configuration manager for wireguard"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
clap = "2.32"
error-chain = "0.12"
ipnet = { version = "2.2", features = ["serde"] }
prettytable-rs = "0.7.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
structopt = "0.3"

[[bin]]
name = "wireguard-configure"
path = "src/main.rs"
